--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -45,7 +45,7 @@
   font-size: 32px;
   font-weight: bold;
   letter-spacing: 1px;
-  color: #ffffff;
+  color: #10cc7d;
 }
 
 /* Subtitle */
@@ -53,7 +53,7 @@
   margin-top: -10px;
   margin-bottom: 20px;
   font-size: 14px;
-  color: #c8e6c9;
+  color: #18c51e;
 }
 
 /* Button */
